--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-fonter": "^0.3.0",
     "gulp-imagemin": "^7.1.0",
+    "gulp-order": "^1.2.0",
     "gulp-sass": "^4.1.0",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^4.0.1",
