--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.5.1",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vanilla-lazyload": "^17.3.1"
   },
   "dependencies": {
     "fullpage": "^1.5.1"
